--- a/面試相關注意事項.md
+++ b/面試相關注意事項.md
@@ -10,3 +10,7 @@ https://github.com/goodjack/developer-roadmap-chinese
 https://moptt.tw/p/Soft_Job.M.1549600641.A.C01
 
 https://blog.hiskio.com/%E3%80%90%E5%AF%A6%E7%94%A8%E3%80%91%E5%BE%8C%E7%AB%AF%E9%9D%A2%E8%A9%A6%E7%B6%93%E9%A9%97%E5%8F%8A%E5%BF%83%E5%BE%97%E5%88%86%E4%BA%AB/
+
+[番外篇] 面試前除了刷 LeetCode 還要準備的事
+
+https://ithelp.ithome.com.tw/articles/10225219
