--- a/Knowledge/Other/小知識.md
+++ b/Knowledge/Other/小知識.md
@@ -50,5 +50,23 @@ out ->
 println() ->
 out的方法之一
 
+[概念] 介面 & 委派
+
+介面 -> 很多物件可共用一個介面 
+
+ex. 作業本 : 國文作業本 , 數學作業本 , 英文作業本
+
+委派 -> 一個物件有很多種的狀態 類似指標
+
+ex1. 勇者.攻擊(), 勇者.防禦(), 勇者.撿物品()
+
+ex2. 蝦仁.刷牙(), 蝦仁.吃飯(), 蝦仁.睡覺()
+
+[概念] DOM & BOM
+
+DOM（文檔對象模型）：規定了訪問HTML和XML的接口；
+
+BOM（瀏覽器對象模型）：提供了獨立于內容而在瀏覽器窗口之間進行交互的對象和方法。
+
 #### 參考頁面 ####
 
