--- a/Knowledge/Other/小知識.md
+++ b/Knowledge/Other/小知識.md
@@ -68,5 +68,40 @@ DOM（文檔對象模型）：規定了訪問HTML和XML的接口；
 
 BOM（瀏覽器對象模型）：提供了獨立于內容而在瀏覽器窗口之間進行交互的對象和方法。
 
+7. 堆與棧
+棧是運行時的單位，而堆是存儲的單位。
+軟體設計的角度看，棧代表了處理邏輯，而堆代表了數據。
+
+在Java中，一個空Object對象的大小是8byte
+Object ob = new Object();
+
+這樣在程序中完成了一個Java對象的生命，
+但是它所占的空間為：4byte+8byte。4byte是上面部分所說的Java棧中保存引用的所需要的空間。
+而那8byte則是Java堆中對象的信息。
+因為所有的Java非基本類型的對象都需要默認繼承Object對象，
+因此不論什麼樣的Java對象，其大小都必須是大於8byte。
+
+    Class NewObject 
+    { 
+        int count;
+        boolean flag; 
+        Object ob; 
+    } 
+
+其大小為：
+
+空對象大小(8byte)+
+int大小(4byte)+
+Boolean大小(1byte)+
+空Object引用的大小(4byte)
+=17byte。
+
+但是因為Java在對對象內存分配時都是以8的整數倍來分，
+因此大於17byte的最接近8的整數倍的是24，
+因此此對象的大小為24byte。
+
+
 #### 參考頁面 ####
+
+https://kknews.cc/code/zbjbjvl.html
 
